[package]
name = "desktop-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bmp = "0.5.0"
config-file = "0.2.3"
directories = "4.0.1"
rand = "0.8.5"
rdev = "0.5.1"
serde = { version = "1.0.145", features = ["derive"] }
windows = { version = "0.42.0", features = ["Win32_UI_Shell"] }
